--- a/backend/views/template.ejs
+++ b/backend/views/template.ejs
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title><%= title %> - Itinerary</title>
   <link rel="stylesheet" href="/public/css/styles.css" />
 </head>
 <body>
@@ -10,56 +8,50 @@
   <p><strong>Name:</strong> <%= name %></p>
   <p><strong>From:</strong> <%= source %> to <%= destination %></p>
   <p><strong>Members:</strong> <%= members %></p>
-  <p><strong>Arrival Date:</strong> <%= arrivalDate %></p>
-  <p><strong>Departure Date:</strong> <%= departureDate %></p>
 
-  <% days.forEach((day, index) => { %>
-    <hr />
-    <h2>Day <%= index + 1 %> - <%= day.date %></h2>
+  <% days.forEach((day, i) => { %>
+    <h2>Day <%= i + 1 %>: <%= day.date %></h2>
+    <h3>Morning</h3>
+    <ul>
+      <% day.activities.morning.forEach(act => { %>
+        <li><strong><%= act.time %></strong>: <%= act.description %></li>
+      <% }); %>
+    </ul>
+    <h3>Afternoon</h3>
+    <ul>
+      <% day.activities.afternoon.forEach(act => { %>
+        <li><strong><%= act.time %></strong>: <%= act.description %></li>
+      <% }); %>
+    </ul>
+    <h3>Evening</h3>
+    <ul>
+      <% day.activities.evening.forEach(act => { %>
+        <li><strong><%= act.time %></strong>: <%= act.description %></li>
+      <% }); %>
+    </ul>
+  <% }); %>
 
-    <h3>Activities</h3>
-    <% if (day.activities.morning.length || day.activities.afternoon.length || day.activities.evening.length) { %>
-      <% if (day.activities.morning.length) { %>
-        <h4>Morning</h4>
-        <ul>
-          <% day.activities.morning.forEach((act) => { %>
-            <li><strong><%= act.time %></strong> - <%= act.description || act.name || "No description" %></li>
-          <% }) %>
-        </ul>
-      <% } %>
+  <% if (hotels && hotels.length > 0) { %>
+    <h2>Hotel Bookings</h2>
+    <ul>
+      <% hotels.forEach(hotel => { %>
+        <li>
+          <strong><%= hotel.city %></strong>: <%= hotel.hotelName %>,
+          Check-in: <%= hotel.checkIn %>,
+          Check-out: <%= hotel.checkOut %>,
+          Nights: <%= hotel.nights %>
+        </li>
+      <% }); %>
+    </ul>
+  <% } %>
 
-      <% if (day.activities.afternoon.length) { %>
-        <h4>Afternoon</h4>
-        <ul>
-          <% day.activities.afternoon.forEach((act) => { %>
-            <li><strong><%= act.time %></strong> - <%= act.description || act.name || "No description" %></li>
-          <% }) %>
-        </ul>
-      <% } %>
-
-      <% if (day.activities.evening.length) { %>
-        <h4>Evening</h4>
-        <ul>
-          <% day.activities.evening.forEach((act) => { %>
-            <li><strong><%= act.time %></strong> - <%= act.description || act.name || "No description" %></li>
-          <% }) %>
-        </ul>
-      <% } %>
-    <% } else { %>
-      <p>No activities planned for this day.</p>
-    <% } %>
-
-    <% if (day.flights.length) { %>
-      <h3>Flights</h3>
-      <ul>
-        <% day.flights.forEach((flight) => { %>
-          <li>
-            <strong>Time:</strong> <%= flight.time %><br />
-            <strong>Description:</strong> <%= flight.description || "No details provided" %>
-          </li>
-        <% }) %>
-      </ul>
-    <% } %>
-  <% }) %>
+  <% if (extraActivities && extraActivities.length > 0) { %>
+    <h2>Extra Activities</h2>
+    <ul>
+      <% extraActivities.forEach(act => { %>
+        <li><strong><%= act.time %></strong>: <%= act.description %></li>
+      <% }); %>
+    </ul>
+  <% } %>
 </body>
 </html>
